<resources>
    <string name="app_name">WorkFiveWeek</string>
    <string name="input_text">请输入想要加密的MD5信息</string>
    <string name="lock">加密</string>
    <string name="unlock">解密</string>
    <string name="MD5">MD5</string>
    <string name="AEC">AEC</string>
    <string name="RSA">RSA</string>
    <string name="username">请输入用户名</string>
    <string name="start_service">启动远程服务</string>
    <string name="add">添加</string>
    <string name="student_list">学生列表:</string>
    <string name="SecretSharedPreference">Secret_SharedPreference</string>
    <string name="aidl">aidl</string>
    <string name="lock_before">这是加密前的数据</string>
    <string name="lock_after">这是加密后的数据</string>
    <string name="unlock_after">这是解密后的数据</string>
    <string name="md5_after">这是MD5后的数据</string>
    <string name="public_lock">公钥加密</string>
    <string name="public_unlock">公钥解密</string>
    <string name="private_lock">私钥加密</string>
    <string name="private_unlock">私钥解密</string>
    <string name="password">请输入密码</string>
    <string name="submit">提交</string>
    <string name="id">请输入学生编号</string>
    <string name="name">请输入学生姓名</string>
    <string name="test_RSA">测试加密 RSA"</string>
</resources>